# TurboKod

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  build.sh  pixi.toml  run.sh
.turbokod/: targets.json
app/: Cargo.toml
app/examples/: glyph_dump.rs
app/macos/: Info.plist  build-app.sh  icon.icns
app/src/: macos_key_monitor.rs  macos_url_scheme.rs  main.rs  settings.rs
app/turbokod-shim/: Cargo.toml
app/turbokod-shim/src/: lib.rs
app/unicode-width-shim/: Cargo.toml
app/unicode-width-shim/src/: lib.rs
examples/: boxes.mojo  checkerboard.mojo  desktop.mojo  diagnose.mojo  hello.mojo  mouse_probe.mojo
scripts/: refresh_languages.py
src/mojovision/: __init__.mojo  app.mojo  canvas.mojo  colors.mojo  dap.mojo  dap_dispatch.mojo  debug_pane.mojo  debugger_config.mojo  desktop.mojo  editor.mojo  editorconfig.mojo  events.mojo  file_dialog.mojo  file_io.mojo  file_tree.mojo  highlight.mojo  language_config.mojo  lsp.mojo  lsp_dispatch.mojo  menu.mojo  posix.mojo  project.mojo  project_find.mojo  prompt.mojo  quick_open.mojo  save_as_dialog.mojo  status.mojo  symbol_pick.mojo  terminal.mojo  window.mojo
src/turbokod/: __init__.mojo  action_editor.mojo  app.mojo  breakpoint_dialog.mojo  breakpoint_store.mojo  buttons.mojo  canvas.mojo  cell.mojo  claude_detect.mojo  clipboard.mojo  colors.mojo  config.mojo  confirm_dialog.mojo  dap.mojo  dap_dispatch.mojo  debug_pane.mojo  debugger_config.mojo  desktop.mojo  diagnostic_menu.mojo  dictionary_install.mojo  diff.mojo  dir_browser.mojo  doc_config.mojo  doc_pick.mojo  doc_store.mojo  dropdown.mojo  editor.mojo  editorconfig.mojo  events.mojo  file_dialog.mojo  file_io.mojo  file_tree.mojo  find_symbol.mojo  geometry.mojo  git_blame.mojo  git_changes.mojo  git_gutter_menu.mojo  grammar_install.mojo  highlight.mojo  install_runner.mojo  (+46 more)
src/turbokod/data/: languages.json
src/turbokod/data/wordlists/: NOTICE.md  (+1 more)
src/turbokod/grammars/: README.md  diff.tmLanguage.json  mojo.tmLanguage.json  python.tmLanguage.json
tests/: dap_frame_click_repro.mojo  dap_smoke.mojo  sighup_integration.sh  sighup_kills_child_smoke.mojo  sighup_self_test.mojo  spawn_then_read_repro.mojo  test_basic.mojo  test_basic.mojo.bak  test_buttons.mojo  test_multicursor.mojo  test_pty_smoke.mojo  test_smart_select.mojo  test_vt_smoke.mojo  tty_read_crash_repro.mojo
tests/fixtures/editorconfig/: .editorconfig
(+1 files in other folders)
