[package]
name = "turbokod-shim"
version = "0.0.1"
edition = "2021"
publish = false

# staticlib: produces a libturbokod_shim.a we link into the Mojo
# binary the same way process_shim.o was linked. We keep crate-type
# narrow on purpose — a dylib would pull in Rust's full runtime as a
# separate library, which complicates DYLD setup in the .app bundle.
[lib]
crate-type = ["staticlib"]
name       = "turbokod_shim"

[dependencies]
# nix wraps POSIX with safe, type-checked Rust APIs — pty, fcntl,
# signal, etc. The "term" feature gates the pty bits we need.
nix = { version = "0.29", features = ["fs", "term", "process", "signal"] }
# libc is the fallback for things nix doesn't wrap (TIOCSCTTY on
# macOS, posix_openpt, etc.).
libc = "0.2"

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
